[gd_scene load_steps=3 format=2]

[ext_resource path="res://scripts/gameplay/weapon.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 256.0

[node name="_WeaponBase" type="Node2D"]
script = ExtResource( 2 )

[node name="AttackRange" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackRange"]
shape = SubResource( 1 )

[node name="ShootSound" type="AudioStreamPlayer2D" parent="."]

[node name="ReloadTimer" type="Timer" parent="."]
one_shot = true

[connection signal="body_entered" from="AttackRange" to="." method="_on_AttackRange_body_entered"]
[connection signal="body_exited" from="AttackRange" to="." method="_on_AttackRange_body_exited"]
[connection signal="timeout" from="ReloadTimer" to="." method="_on_ReloadTimer_timeout"]
